--- a/src/pages/admin/ad-settings/ad-settings.html
+++ b/src/pages/admin/ad-settings/ad-settings.html
@@ -4,25 +4,19 @@
 
   <template>
 
-    <style include=""></style>
+    <style include="common-styles"></style>
     <style>
-      .mainCard{
-        width:80%;
-        margin: -50px 10% 50px 10%;
-        padding-bottom:50px;
-        position:absolute;
-      }
-    paper-card{
+    .pageCard{
       min-height:800px;
     }
     </style>
 
-    <paper-card class="mainCard">
+    <paper-card class="pageCard">
       <admin-header
         page="Settings"
         icon="icons:settings">
       </admin-header>
-      <div class="container">
+      <div class="pageInnerCont padded">
         <h1>Coming Soon!</h1>
       </div>
     </paper-card>
