--- a/src/pages/admin/ad-payment/dependencies.html
+++ b/src/pages/admin/ad-payment/dependencies.html
@@ -1,7 +1,6 @@
 <link rel="import" href="../../../../bower_components/polymer/polymer.html" />
 <link rel="import" href="../../../../bower_components/polymerfire/firebase-document.html" />
 <link rel="import" href="../../../../bower_components/paper-card/paper-card.html" />
-<link rel="import" href="../../../elements/admin-header/admin-header.html" />
 <link rel="import" href="../../../../bower_components/paper-input/paper-input.html" />
 <link rel="import" href="../../../../bower_components/paper-button/paper-button.html" />
 <link rel="import" href="../../../../bower_components/paper-icon-button/paper-icon-button.html" />
@@ -9,4 +8,8 @@
 <link rel="import" href="../../../../bower_components/app-layout/app-grid/app-grid-style.html" />
 <link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
 
+<link rel="import" href="../../../elements/admin-header/admin-header.html" />
+
 <link rel="import" href="../../../behaviors/animations/admin-pages-animation.html" />
+
+<link rel="import" href="../../../styles/common-styles.html" />
