--- a/src/pages/admin/ad-profile/dependencies.html
+++ b/src/pages/admin/ad-profile/dependencies.html
@@ -6,8 +6,11 @@
 <link rel="import" href="../../../../bower_components/paper-icon-button/paper-icon-button.html" />
 <link rel="import" href="../../../../bower_components/app-layout/app-grid/app-grid-style.html" />
 <link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
+
 <link rel="import" href="../../../elements/admin-header/admin-header.html" />
 <link rel="import" href="../../../elements/firebase-storage/firebase-storage.html" />
 <link rel="import" href="../../../elements/guuey-photo-editor/guuey-photo-editor.html" />
 
 <link rel="import" href="../../../behaviors/animations/admin-pages-animation.html" />
+
+<link rel="import" href="../../../styles/common-styles.html" />
