--- a/src/pages/admin/ad-users/dependencies.html
+++ b/src/pages/admin/ad-users/dependencies.html
@@ -9,10 +9,12 @@
 <link rel="import" href="../../../../bower_components/paper-listbox/paper-listbox.html" />
 <link rel="import" href="../../../../bower_components/paper-item/paper-item.html" />
 <link rel="import" href="../../../../bower_components/paper-button/paper-button.html" />
-<link rel="import" href="../../../elements/admin-header/admin-header.html" />
 <link rel="import" href="../../../../bower_components/paper-icon-button/paper-icon-button.html" />
 <link rel="import" href="../../../../bower_components/iron-image/iron-image.html" />
-<link rel="import" href="../../../../bower_components/app-layout/app-grid/app-grid-style.html" />
 <link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
 
+<link rel="import" href="../../../elements/admin-header/admin-header.html" />
+
 <link rel="import" href="../../../behaviors/animations/admin-pages-animation.html" />
+
+<link rel="import" href="../../../styles/common-styles.html" />
