added common style sheet and updated styles for admin pages. updated my-app.html to different overlay for login area.

--- a/src/pages/default/def-error/def-error.html
+++ b/src/pages/default/def-error/def-error.html
@@ -10,20 +10,17 @@
       app-name="main">
     </firebase-document>
 
-    <style>
-
-      paper-card{
-        width:90%;
-        margin:20px 5% 20px 5%;
-      }
+    <style include="common-styles">
 
     </style>
 
-    <paper-card>
-      <h1>error 404</h1>
-      <p>
-        The page you are looking for cannot be found.
-      </p>
+    <paper-card class="pageCard">
+      <div class="pageInnerCont padded">
+        <h1>error 404</h1>
+        <p>
+          The page you are looking for cannot be found.
+        </p>
+      </div>
     </paper-card>
   </template>
 
