--- a/src/pages/default/def-error/dependencies.html
+++ b/src/pages/default/def-error/dependencies.html
@@ -2,3 +2,5 @@
 <link rel="import" href="../../../../bower_components/paper-card/paper-card.html" />
 
 <link rel="import" href="../../../behaviors/animations/default-pages-animation.html" />
+
+<link rel="import" href="../../../styles/common-styles.html" />
