--- a/src/my-app.html
+++ b/src/my-app.html
@@ -228,7 +228,6 @@
         bottom:0;
         top:0;
         background-color:rgba(0, 0, 0, 0.5);
-        z-index:5;
         flex-direction:column;
         align-items:center;
         justify-content: center;
@@ -239,8 +238,15 @@
         font-style:italic;
 
       }
-      .loadingOverlay *{
-
+      .loginOverlay{
+        position:fixed;
+        top:0;
+        left:0;
+        width:100%;
+        z-index:6;
+        height:var(--login-overlay-height);
+        background-color:#2fc19e;
+        display:var(--login-overlay-display);
       }
       .mainProgress{
         width:100%;
@@ -290,15 +296,17 @@
         color:#FFF;
       }
       #suDrawer{
-        
+
       }
       #suDrawerImage{
         width:256px;
         height:256px;
       }
-      #neonPages{
+      #neonPages, #neonPages *{
         height:var(--neon-pages-height);
+        z-index:100;
       }
+
     </style>
 
     <div class="loadingOverlay">
@@ -307,6 +315,7 @@
         Just a minute... Content Loading...
       </p>
     </div>
+    <div class="loginOverlay"></div>
 
     <app-drawer-layout fullbleed id="appDrawerLayout">
 
@@ -344,66 +353,64 @@
       <app-header-layout fullbleed>
 
         <app-header id="appHeader" condenses reveals effects="waterfall">
-          <span hidden="{{!loginPageInactive(page)}}">
-            <app-toolbar>
-              <div class="toolbarLeft">
-                <paper-icon-button class="toolbarButton" icon="menu" on-tap="toggleDrawer"></paper-icon-button>
-                <span class="menuText">menu</span>
-                <span hidden="[[searchVal]]">
-                  <paper-icon-button class="toolbarButton" icon="icons:search"></paper-icon-button>
-                </span>
-                <span hidden="[[!searchVal]]">
-                  <paper-icon-button class="toolbarButton" icon="icons:clear" on-tap="clearSearch"></paper-icon-button>
-                </span>
-                <input class="searchInput" type="text" value="{{searchVal::input}}" />
+          <app-toolbar>
+            <div class="toolbarLeft">
+              <paper-icon-button class="toolbarButton" icon="menu" on-tap="toggleDrawer"></paper-icon-button>
+              <span class="menuText">menu</span>
+              <span hidden="[[searchVal]]">
+                <paper-icon-button class="toolbarButton" icon="icons:search"></paper-icon-button>
+              </span>
+              <span hidden="[[!searchVal]]">
+                <paper-icon-button class="toolbarButton" icon="icons:clear" on-tap="clearSearch"></paper-icon-button>
+              </span>
+              <input class="searchInput" type="text" value="{{searchVal::input}}" />
 
-                <iron-collapse id="searchDropdown">
+              <iron-collapse id="searchDropdown">
 
-                  <template
-                    is="dom-repeat"
-                    items="[[suList]]"
-                    as="search"
-                    filter="{{searchFilter(searchVal)}}"
-                    observe="fName lName"
-                    initial-count="10">
-                      <a class="dropdownLinks" href="/[[home]]/care-plan/su-profile/[[search.$key]]" on-tap="hideSearch">
-                        <paper-item class="dropdownItem">[[search.fName]] [[search.lName]]</paper-item>
+                <template
+                  is="dom-repeat"
+                  items="[[suList]]"
+                  as="search"
+                  filter="{{searchFilter(searchVal)}}"
+                  observe="fName lName"
+                  initial-count="10">
+                    <a class="dropdownLinks" href="/[[home]]/care-plan/su-profile/[[search.$key]]" on-tap="hideSearch">
+                      <paper-item class="dropdownItem">[[search.fName]] [[search.lName]]</paper-item>
+                    </a>
+                </template>
+
+              </iron-collapse>
+
+            </div>
+
+            <div class="toolbarRight">
+              <a class="inherit" href="/[[home]]/default/def-home"><paper-icon-button class="toolbarButton" icon="icons:home"></paper-icon-button></a>
+              <paper-icon-button class="toolbarButton" icon="icons:apps"></paper-icon-button>
+
+              <paper-icon-button class="toolbarButton dropdown-trigger" icon="social:notifications" on-tap="showNotifications"></paper-icon-button>
+              <span id="notifyCount" hidden="{{computeNotifyHidden(notifyCount)}}">[[notifyCount]]</span>
+              <iron-collapse id="notificationDropdown">
+
+                <template is="dom-repeat" items="[[notifiesData]]" as="notification">
+                    <paper-item class="notifyText">
+                      [[notification.message]]
+                      <paper-button class="notifyButton" on-tap="dismissNotification">dismiss</paper-button>
+                      <a style="text-decoration:none;" class="inherit" href="[[notification.url]]">
+                        <paper-button class="notifyButton">check</paper-button>
                       </a>
-                  </template>
+                    </paper-item>
 
-                </iron-collapse>
+                </template>
 
-              </div>
+              </iron-collapse>
 
-              <div class="toolbarRight">
-                <a class="inherit" href="/[[home]]/default/def-home"><paper-icon-button class="toolbarButton" icon="icons:home"></paper-icon-button></a>
-                <paper-icon-button class="toolbarButton" icon="icons:apps"></paper-icon-button>
+              <paper-icon-button class="toolbarButton logoutButton" on-tap="logout" icon="icons:account-circle"></paper-icon-button>
+            </div>
 
-                <paper-icon-button class="toolbarButton dropdown-trigger" icon="social:notifications" on-tap="showNotifications"></paper-icon-button>
-                <span id="notifyCount" hidden="{{computeNotifyHidden(notifyCount)}}">[[notifyCount]]</span>
-                <iron-collapse id="notificationDropdown">
-
-                  <template is="dom-repeat" items="[[notifiesData]]" as="notification">
-                      <paper-item class="notifyText">
-                        [[notification.message]]
-                        <paper-button class="notifyButton" on-tap="dismissNotification">dismiss</paper-button>
-                        <a style="text-decoration:none;" class="inherit" href="[[notification.url]]">
-                          <paper-button class="notifyButton">check</paper-button>
-                        </a>
-                      </paper-item>
-
-                  </template>
-
-                </iron-collapse>
-
-                <paper-icon-button class="toolbarButton logoutButton" on-tap="logout" icon="icons:account-circle"></paper-icon-button>
-              </div>
-
-            </app-toolbar>
-            <paper-progress class="mainProgress" indeterminate></paper-progress>
-          </span>
+          </app-toolbar>
+          <paper-progress class="mainProgress" indeterminate></paper-progress>
         </app-header>
-        <div class="headerBackground">
+        <div id="headerBackground" class="headerBackground">
           <paper-icon-button class="backButton" icon="hardware:keyboard-backspace" on-tap="goBack"></paper-icon-button>
         </div>
         <!--page templates are loded in here inside iron pages-->
@@ -665,12 +672,24 @@
         this.addEventListener('pageLoaded', this.disablePageLoading);
         this.addEventListener('app-drawer-transitioned', this.resizeDrawerImage);
         this.fire("pageLoaded",{page:this.page});
+        this.addEventListener("resize", this.resizeElements);
         this.$.storage._downloadFile(this.$.storage.path);
       },
       attached:function(){
+        this.resizeElements();
+      },
+      resizeElements:function(){
         var neonOffsetTop=this.$.neonPages.offsetTop;
         var screenHeight=window.innerHeight;
-        this.customStyle["--neon-pages-height"]=screenHeight-neonOffsetTop-100+"px";
+        var headerHeight=this.$.headerBackground.offsetHeight + this.$.appHeader.offsetHeight;
+        this.customStyle["--neon-pages-height"]=screenHeight-headerHeight+"px";
+        if(this.page==="def-login"){
+          this.customStyle["--login-overlay-display"]="inline-block";
+          this.customStyle["--login-overlay-height"]=headerHeight+"px";
+        } else {
+          this.customStyle["--login-overlay-display"]="none";
+          this.customStyle["--login-overlay-height"]="0px";
+        };
         this.updateStyles();
       },
       //create new service user for an already existing home
