--- a/src/pages/default/def-login/def-login.html
+++ b/src/pages/default/def-login/def-login.html
@@ -19,6 +19,7 @@
         display: block;
         background-color:#2fc19e;
         position:fixed;
+        z-index:20;
         top:0;
         left:0;
         bottom:0;
