--- a/src/pages/default/def-login/dependencies.html
+++ b/src/pages/default/def-login/dependencies.html
@@ -8,3 +8,5 @@
 <link rel="import" href="../../../../bower_components/iron-collapse/iron-collapse.html" />
 
 <link rel="import" href="../../../behaviors/animations/default-pages-animation.html" />
+
+<link rel="import" href="../../../styles/common-styles.html" />
