--- a/src/pages/default/def-verify/dependencies.html
+++ b/src/pages/default/def-verify/dependencies.html
@@ -3,4 +3,7 @@
 <link rel="import" href="../../../../bower_components/paper-button/paper-button.html" />
 <link rel="import" href="../../../../bower_components/polymerfire/firebase-auth.html" />
 <link rel="import" href="../../../../bower_components/paper-input/paper-input.html" />
+
 <link rel="import" href="../../../behaviors/animations/default-pages-animation.html" />
+
+<link rel="import" href="../../../styles/common-styles.html" />
