--- a/src/behaviors/fab-animation-behavior.html
+++ b/src/behaviors/fab-animation-behavior.html
@@ -4,8 +4,6 @@
 <link rel="import" href="../../bower_components/neon-animation/animations/slide-from-left-animation.html" />
 <link rel="import" href="../../bower_components/neon-animation/animations/fade-out-animation.html" />
 <link rel="import" href="../../bower_components/neon-animation/animations/fade-in-animation.html" />
-<link rel="import" href="./animations/fab-down-animation.html" />
-<link rel="import" href="./animations/fab-up-animation.html" />
 
 
   <script>
@@ -16,7 +14,7 @@
       attached:function(){
         this.addEventListener("neon-animation-finish", this._neonAnimationFinish);
       },
-      attributeChanged:function(){
+      ready:function(){
         this.$.editFab.disabled=true;
         this.animationConfig={
           "editState":[
