--- a/src/elements/su-header/su-header.html
+++ b/src/elements/su-header/su-header.html
@@ -74,17 +74,18 @@ setimage(boolean)
       .pageHeader{
         margin:0px !important;
         padding: 0px 0px 0px 0px; !important;
+        display:flex;
+        flex-direction:row;
       }
       .headerAvatar{
         background-color:#9DDEF2;
         background-color: var(--su-header-avatar-background-color);
         height:150px;
-        width:20%;
+        width:150px;
         height:var(--header-image-height);
-
+        width:var(--header-image-width);
         margin:0px !important;
         padding: 0px !important;
-        float:left;
         position:relative;
       }
       .avatarHeaderDefault{
@@ -95,14 +96,13 @@ setimage(boolean)
       .headerInfoRow{
         height:150px;
         height:var(--header-info-height);
-        width:80%;
         margin:0px !important;
         padding: 0px !important;
         color:#FFFFFF;
         color:var(--su-header-info-row-color);
         padding-bottom:50px;
         position:relative;
-        float:right;
+        flex-grow:1;
       }
       .patientName{
         background-color:#42beff;
